Service, model and infra-repo layer added. Basic implementation
